@@ -101,11 +101,6 @@
   font-size: 12px;
 }
 
-.f {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-}
-
 .menu {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
@@ -444,31 +439,27 @@ img.sort {
   padding: 2px;
 }
 
-.loginContent {
-  width: 428px;
+#loginBox {
+  width: 27em;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-}
-
-.loginForm {
-  border: 1px solid #000000;
-  text-align: center;
-}
-
-.loginForm table {
-  background-color: #F5FCFF;
-  border: 0px;
-  padding: 0px;
-  width: 100%;
-  background: url(./img/shtamp.png) top center no-repeat;
-}
-
-.loginTitle {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  text-align: center;
-  font-weight: bold;
+  background-color: #F5FCFF;
+  background: url(./img/shtamp.png) top center no-repeat;
+  border: 1px solid #000000;
+}
+
+#loginBox h2 {
+  margin: 0;
+  padding: 0.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#loginBox table {
+  width: 100%;
+  margin: 0;
+  padding: 0.5em;
 }
 
 .send {
