@@ -89,10 +89,6 @@
   font-size: 18px;
 }
 
-.f {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .menu {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -429,30 +425,26 @@ img.sort {
   padding: 2px;
 }
 
-.loginContent {
-  width: 428px;
+#loginBox {
+  width: 27em;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-}
-
-.loginForm {
-  border: 1px solid #000000;
-  text-align: center;
-}
-
-.loginForm table {
-  background-color: #CCCCCC;
-  border: 0px;
-  padding: 0px;
-  width: 100%;
-}
-
-.loginTitle {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  text-align: center;
-  font-weight: bold;
+  background-color: #CCCCCC;
+  border: 1px solid #000000;
+}
+
+#loginBox h2 {
+  margin: 0;
+  padding: 0.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#loginBox table {
+  width: 100%;
+  margin: 0;
+  padding: 0.5em;
 }
 
 .send {
