@@ -8,6 +8,7 @@ NOCC 1.4    ?? ??, 200?
     * Patch #1639027 : RSS: Add nocc_login as parameter (Tim Gerundt).
     * Patch #1639021 : RSS: Fix array_shift warning (Tim Gerundt).
     * Patch #1632779 : Fix Invalid HTML in html/prefs.php (Tim Gerundt).
+    * Patch #1630921 : Optimize login box (Tim Gerundt).
     * Patch #1627141 : CS translation for 1.3 version (Ragimiri).
 
   RFE
